# ESMPDB

./: .gitignore  README.md  pyproject.toml
notebooks/: monitor_training.ipynb
runs/: esm2_650M_siamese_v3.json  esm2_650M_triplet_v1.json  esm2_650M_triplet_v2.json  test_1epoch.json
src/esm_pdb1/: __init__.py  config.py  data.py  evaluation.py  label_qc.py  loss.py  model.py  train.py
