[project]
name = "esm-pdb1"
version = "0.1.0"
description = "Contrastive antibody embedding model using ESM-2 backbone, trained on SAbDab structural pairing data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "transformers>=4.37",
    "peft>=0.4",
    "polars>=1.0",
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.scripts]
esm-pdb1-train = "esm_pdb1.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esm_pdb1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
